adds a sql file. gets the entity example generating